Jan 01 2004  3.1.0  Added legend drawing to GPSMap, finally
                    Various speedups inside gpsmap
                    Readme updates
Dec 27 2003  3.1.0  Fixed remembering probe networks associated by data packets
                    Added reporting of cardsource id (step 1 of client-
                     controlled channel locking) over card protocol
                    Added reporting of number of packets per source over card
                     protocol
                    Split bulk of config file handling off into a separate
                     function to make compiling kismet_server.cc less demanding
Dec 25 2003  3.1.0  More README updates
                    Smarter handling of garbage gps values in gpsd
                    Added association of probe networks based on data exchange
                     with a BSSID
                    Fixed segfault in panels client with autogroup probe 
                     network
Dec 24 2003  3.1.0  More README updates
                    More invalid packet detection for drivers that feed us junk
                    Fixed FCS on orinoco
                    Actually fixed FCS
                    Fixed statically defined wepkey size that introduced
                     failures, actually merged wep key resize into config.h.in
                    Removed stray debug string
                    Added GPSD reconnect code
Dec 23 2003  3.1.0  Added DupeIV display to panels client
Dec 22 2003  3.1.0  Increased max wep key size to 32 hex pairs
                    Fixed gpsmap dupeiv
                    Revamped gpsmap power level colormap assignment
Dec 21 2003  3.1.0  Added discarding of large management and phy frames as an
                     effort to minimize the impact of junk frames from some
                     drivers.
                    Fixed errors in sourcetracker when child processes aren't
                     used
                    Fixed display of card levels in panel client