@@ -1,6 +1,8 @@
 Jan 01 2004  3.1.0  Added legend drawing to GPSMap, finally
                     Various speedups inside gpsmap
                     Readme updates
+                    Fixed legend drawing eating one map file
+                    Significant speed boosts to gpsmap filtering
 Dec 27 2003  3.1.0  Fixed remembering probe networks associated by data packets
                     Added reporting of cardsource id (step 1 of client-
                      controlled channel locking) over card protocol
